--- a/app/src/main/res/layout/activity_dynamic_chart_line_activity2.xml
+++ b/app/src/main/res/layout/activity_dynamic_chart_line_activity2.xml
@@ -1,116 +1,136 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
 
     >
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/dynamic_chart_line_layout2"
-        tools:context=".StaticChartLineActivity"
-        android:layout_weight="1"
-        ></RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="9"
-        android:orientation="horizontal"
-        android:background="#000000"
-        >
-        <Button
+        android:layout_weight="1"
+        tools:context=".StaticChartLineActivity"></RelativeLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_pasue"
-        android:background="#ffffff"
-        android:text="停止跟踪"
-        android:layout_marginRight="10dp"
-        />
-        <Button
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_pasue"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:background="#ffffff"
+                android:text="停止跟踪"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btn_follow"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:background="#ffffff"
+                android:text="跟踪"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textview_y"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_follow"
-            android:background="#ffffff"
-            android:text="跟踪"
-
-            />
+            android:text="当前时间： 当前温度："
+            android:textColor="#ffffff"
+            android:textSize="14dp" />
+        <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_gravity="right"-->
+        <!--&gt;-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textview_y"
+            android:text="主机ip"
             android:textColor="#ffffff"
-            android:textSize="20dp"
-            android:text="当前时间： 当前温度："
-            />
+            android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/et_ip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="192.168.0.105"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="port"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
+        <EditText
+            android:id="@+id/et_port"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="8899"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="时间间隔"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
+        <EditText
+            android:id="@+id/et_pinlv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="秒"
+            android:textSize="14sp"
+            android:textColor="#ffffff" />
+
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="right"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="主机ip"
-                android:textColor="#ffffff"/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/et_ip"
-                android:text="192.168.0.105"
-                android:textColor="#ffffff"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="；port"
-                android:textColor="#ffffff"
-                />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/et_port"
-                android:text="8899"
-                android:textColor="#ffffff"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="；时间间隔"
-                android:textColor="#ffffff"
-                />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/et_pinlv"
-                android:text="1"
-                android:textColor="#ffffff"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="秒"
-                android:textColor="#ffffff"
-                />
+            android:layout_height="wrap_content">
+
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/btn_start"
-                android:text="开始"
-                android:background="#ffffff"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                />
-            <Button
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_close"
-                android:text="关闭"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:background="#ffffff"
-                />
+                android:textSize="14sp"
+                android:text="开始" />
+
+            <Button
+                android:id="@+id/btn_close"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:background="#ffffff"
+                android:textSize="14sp"
+                android:text="关闭" />
 
         </LinearLayout>
+
+        <!--</LinearLayout>-->
     </LinearLayout>
 
 </LinearLayout>
